resolved "the patient's Calendar not aligned properly" issue | HEAL-1249

--- a/src/components/Doctor Module/doctor.css
+++ b/src/components/Doctor Module/doctor.css
@@ -3812,7 +3812,7 @@ input:checked + .slider:before {
 
 .profile-menu > .MuiMenu-paper {
   top: 80px !important;
-  left: 1165px !important;
+  left: 1175px !important;
 }
 
 @media (max-width: 1180px) {
